samples/_failures_safe/1761398533_dbb091_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25a1acba.c: In function ‘tokenize_operator’:
./samples/SAFE/__tmp_25a1acba.c:159:69: error: expected ‘)’ at end of input
  159 |     if (state->position < state->input_len && is_operator_char(state
      |                                                               ~     ^
      |                                                                     )
./samples/SAFE/__tmp_25a1acba.c:159:5: error: expected declaration or statement at end of input
  159 |     if (state->position < state->input_len && is_operator_char(state
      |     ^~
